--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Brian Holt <btholt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "standard",
+    "lint": "eslint js/**/*.js webpack.config.js",
     "build": "webpack",
-    "dev": "webpack --watch"
+    "dev": "webpack-dev-server",
+    "watch": "webpack --watch"
   },
   "dependencies": {
     "axios": "0.15.2",
